# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2011-03-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * add ruby/gem build integration
    * add ruby erlectricity integration, API in-progress
    * fix major bugs with overloading external processes and
      file descriptor blocking reading at allocation boundaries

2011-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * add mcast_async API function

2011-03-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * make install now works using autoconf/automake/rebar
    * configure files now included
    * version 0.1.0 package created

2011-02-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * tests/http now includes a java service implementation
    * the java API is functional after some bugfixes and changing the jar
    * various bugfixes

2011-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.0 (alpha) released

2011-02-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * hexpi test created with previous hexidecimal pi generation test, but
      now structured with services.
    * configuration format added to represent new configuration information
    * service supervision added with monitors to restart with
      previous configuration
    * node connection management added

2011-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * misultin now accepts incoming requests and can handle compressed requests
    * simple tests exist to use curl for misultin and a python test service
    * C API added

2011-02-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * pgsql, mysql, TokyoTyrant, couchdb, memcached data modules converted
      to the cloudi_job behavior, though the binary responses need work

2011-02-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * python API added with BSD licensed encoding for Erlang term
    * java API added using jinterface encoding